[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "activity"
path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.20"
thiserror = "1.0.32"
crossbeam-channel = "0.5.6"
colored = "2.0.0"
parking_lot = "0.12.0"