[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
chrono = { version = "0.4.22", features = ["serde"]}
uuid = { version = "1.2.1", features = ["serde", "v4"] }
derive_more = "0.99.17"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
handlebars = { version = "4.3.5", features = ["dir_source"]}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
structopt = { version = "0.3.26" }
dotenv = "0.15.0"
tokio = "1.21.2"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"